# amiai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: 00_amiai_raw_data.csv  01_amiai_preprocessed_data.csv  01_amiai_preprocessed_data.pkl  stopwords.txt
notebook/: 01_selection_pre_processing.ipynb  02_vec_clust.ipynb
src/: cleaning.py  preprocessing.py
